# SeniorOfficialProfileAnalysisSystem

./: .env.example  .gitignore  README.md  SDD.md  SRS.md  docker-compose.yml  env.md  系统设计说明书.md  软件需求规格说明书.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analysis.py  auth.py  export.py  officials.py  router.py  scraper.py  users.py
backend/app/core/: config.py  database.py  logging.py  neo4j_client.py  redis_client.py  security.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/llm/: __init__.py  adapter.py
backend/app/models/: __init__.py  official.py  scraper.py  user.py
backend/app/modules/: __init__.py
backend/app/modules/analysis/: __init__.py  router.py  schemas.py
backend/app/modules/auth/: __init__.py  dependencies.py  router.py
backend/app/modules/committee/: __init__.py  router.py  schemas.py
backend/app/modules/health/: __init__.py  router.py
backend/app/modules/officials/: __init__.py  router.py  schemas.py
backend/app/modules/relationships/: __init__.py  generator.py  router.py  schemas.py  scoring.py
backend/app/modules/sources/: __init__.py  crawler.py  profile_parser.py  router.py  schemas.py
backend/app/repositories/: neo4j_repo.py
backend/app/schemas/: auth.py  common.py  official.py
backend/app/services/: official_service.py
backend/app/tasks/: celery_app.py  scraper_tasks.py
backend/app/workers/: __init__.py  analysis_tasks.py  celery_app.py  crawl_tasks.py
backend/tests/: test_scoring.py
(+58 files in other folders)
