[project]
name = "senior-official-profile-analysis-backend"
version = "0.1.0"
description = "Backend service for senior official profile collection, storage, analysis, and visualization."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "beautifulsoup4>=4.12.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "requests>=2.32.0",
  "sqlalchemy>=2.0.0",
  "structlog>=24.1.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

